Archive2/41/8494fe185d57bc/output
main.cpp:16:78: warning: unused parameter 'v' [-Wunused-parameter]
    inline std::ostream& operator <<(std::ostream& ss, const std::vector<T> &v)
                                                                             ^
main.cpp:23:19: error: invalid operands to binary expression ('ostream' (aka 'basic_ostream<char>') and 'std::vector<int>')
        std::cout << std::vector<int>{};   
        ~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~
/usr/include/c++/v1/ostream:175:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'std::__1::basic_ostream<char> &(*)(std::__1::basic_ostream<char> &)' for 1st argument
    basic_ostream& operator<<(basic_ostream& (*__pf)(basic_ostream&));
                   ^
/usr/include/c++/v1/ostream:176:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'basic_ios<char_type, traits_type> &(*)(basic_ios<char_type, traits_type> &)' for 1st argument
    basic_ostream& operator<<(basic_ios<char_type, traits_type>&
                   ^
/usr/include/c++/v1/ostream:178:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'std::__1::ios_base &(*)(std::__1::ios_base &)' for 1st argument
    basic_ostream& operator<<(ios_base& (*__pf)(ios_base&));
                   ^
/usr/include/c++/v1/ostream:179:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'bool' for 1st argument
    basic_ostream& operator<<(bool __n);
                   ^
/usr/include/c++/v1/ostream:180:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'short' for 1st argument
    basic_ostream& operator<<(short __n);
                   ^
/usr/include/c++/v1/ostream:181:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'unsigned short' for 1st argument
    basic_ostream& operator<<(unsigned short __n);
                   ^
/usr/include/c++/v1/ostream:182:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'int' for 1st argument
    basic_ostream& operator<<(int __n);
                   ^
/usr/include/c++/v1/ostream:183:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'unsigned int' for 1st argument
    basic_ostream& operator<<(unsigned int __n);
                   ^
/usr/include/c++/v1/ostream:184:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'long' for 1st argument
    basic_ostream& operator<<(long __n);
                   ^
/usr/include/c++/v1/ostream:185:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'unsigned long' for 1st argument
    basic_ostream& operator<<(unsigned long __n);
                   ^
/usr/include/c++/v1/ostream:186:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'long long' for 1st argument
    basic_ostream& operator<<(long long __n);
                   ^
/usr/include/c++/v1/ostream:187:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'unsigned long long' for 1st argument
    basic_ostream& operator<<(unsigned long long __n);
                   ^
/usr/include/c++/v1/ostream:188:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'float' for 1st argument
    basic_ostream& operator<<(float __f);
                   ^
/usr/include/c++/v1/ostream:189:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'double' for 1st argument
    basic_ostream& operator<<(double __f);
                   ^
/usr/include/c++/v1/ostream:190:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'long double' for 1st argument
    basic_ostream& operator<<(long double __f);
                   ^
/usr/include/c++/v1/ostream:191:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'const void *' for 1st argument
    basic_ostream& operator<<(const void* __p);
                   ^
/usr/include/c++/v1/ostream:192:20: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'basic_streambuf<char_type, traits_type> *' for 1st argument
    basic_ostream& operator<<(basic_streambuf<char_type, traits_type>* __sb);
                   ^
/usr/include/c++/v1/ostream:760:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'char' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, char __cn)
^
/usr/include/c++/v1/ostream:793:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, char __c)
^
/usr/include/c++/v1/ostream:825:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'signed char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, signed char __c)
^
/usr/include/c++/v1/ostream:857:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'unsigned char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, unsigned char __c)
^
/usr/include/c++/v1/ostream:922:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'const char *' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, const char* __strn)
^
/usr/include/c++/v1/ostream:968:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'const char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const char* __str)
^
/usr/include/c++/v1/ostream:1001:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'const signed char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const signed char* __str)
^
/usr/include/c++/v1/ostream:1034:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'const unsigned char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const unsigned char* __str)
^
/usr/include/c++/v1/ostream:1259:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::vector<int>' to 'const std::__1::error_code' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __ec)
^
main.cpp:4:22: note: candidate function not viable: no known conversion from 'vector<int>' to 'const vector<double>' for 2nd argument
inline std::ostream& operator <<(std::ostream& ss, std::vector<double> const& vec)
                     ^
/usr/include/c++/v1/ostream:728:1: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'std::__1::vector<int, std::__1::allocator<int> >')
operator<<(basic_ostream<_CharT, _Traits>& __os, _CharT __c)
^
/usr/include/c++/v1/ostream:1210:5: note: candidate template ignored: disabled by 'enable_if' [with _Stream = std::__1::basic_ostream<char> &, _Tp = std::__1::vector<int, std::__1::allocator<int> >]
    !is_lvalue_reference<_Stream>::value &&
    ^
/usr/include/c++/v1/ostream:889:1: note: candidate template ignored: could not match 'const _CharT *' against 'std::vector<int>'
operator<<(basic_ostream<_CharT, _Traits>& __os, const _CharT* __str)
^
/usr/include/c++/v1/ostream:1224:1: note: candidate template ignored: could not match 'basic_string' against 'vector'
operator<<(basic_ostream<_CharT, _Traits>& __os,
^
/usr/include/c++/v1/ostream:1267:1: note: candidate template ignored: could not match 'shared_ptr' against 'vector'
operator<<(basic_ostream<_CharT, _Traits>& __os, shared_ptr<_Yp> const& __p)
^
/usr/include/c++/v1/ostream:1274:1: note: candidate template ignored: could not match 'bitset' against 'vector'
operator<<(basic_ostream<_CharT, _Traits>& __os, const bitset<_Size>& __x)
^
1 warning and 1 error generated.
